# fastapi-tutorial

./: Dockerfile  README.md  makefile  pyproject.toml
NiceGUI-Template/: .gitignore  README.md  docker-compose.yml  pyproject.toml
NiceGUI-Template/WebApp/: main.py  startup.py
NiceGUI-Template/WebApp/Auth/: auth.py
NiceGUI-Template/WebApp/Pages/: home.py
NiceGUI-Template/WebApp/Templates/: base.py
NiceGUI-Template/WebApp/Utils/: db_utils.py
NiceGUI-Template/web/: Dockerfile
planner/: Dockerfile  main.py  requirements.txt
planner/models/: events.py  users.py
planner/routes/: events.py  users.py
todo/: Dockerfile  api.py  model.py  requirements.txt  todo.py
todo/templates/: todo.html
