[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["PEBpung <mcuwwa29@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
