[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["PEBpung <mcuwwa29@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.1"
uvicorn = "0.22.0"
jinja2 = "3.0.3"
black = "^23.3.0"
anyio = "3.5.0"
asgiref = "3.5.0"
bcrypt = "3.2.0"
beanie = "1.10.4"
cffi = "1.15.0"
click = "8.0.4"
dnspython = "2.2.0"
email-validator = "1.1.3"
h11 = "0.13.0"
idna = "3.3"
markupsafe = "2.1.0"
motor = "2.5.1"
multidict = "6.0.2"
passlib = "1.7.4"
pycparser = "2.21"
pydantic = "1.9.0"
pyjwt = "2.3.0"
pymongo = "3.12.3"
python-dotenv = "0.20.0"
python-multipart = "0.0.6"
six = "1.16.0"
sniffio = "1.2.0"
sqlalchemy = "1.4.32"
sqlalchemy2-stubs = "0.0.2a20"
sqlmodel = "0.0.6"
starlette = "^0.26.1"
toml = "0.10.2"
typing-extensions = "4.1.1"
yarl = "^1.9.2"
pre-commit = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
