[tool.poetry]
name = "nicegpu-temp"
version = "0.1.0"
description = ""
authors = ["PEBpung <mcuwwa29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "0.20.0"
nicegui = "1.2.16"
requests = "^2.31.0"
itsdangerous = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
